--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="wechat-java-sdk.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/wechat-java-sdk/wechat-java-sdk">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="wechat-java-sdk-demo"/>
         <property name="java-output-path" value="/wechat-java-sdk-demo/build/classes"/>
     </wb-module>
